--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "labyrinth"
 version = "0.1.0"
-authors = ["Horacio Hidalgo <horacio.m.hidalgo.herrera@intel.com>"]
+authors = ["Horacio Hidalgo <horacio.hidalgo@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
